# ChangeLog for dev-ruby/rspec
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec/ChangeLog,v 1.21 2008/04/12 14:03:13 cla Exp $

  12 Apr 2008; Dawid Węgliński <cla@gentoo.org> rspec-1.1.3.ebuild:
  Stable on x86 (bug #217389)

  12 Apr 2008; nixnut <nixnut@gentoo.org> rspec-1.1.3.ebuild:
  Stable on ppc wrt bug 217389

  12 Apr 2008; Hans de Graaff <graaff@gentoo.org> rspec-1.1.3.ebuild:
  Mark stable on amd64, bug #217389

  21 Mar 2008; Hans de Graaff <graaff@gentoo.org> -rspec-1.0.5.ebuild,
  -rspec-1.1.0.ebuild, -rspec-1.1.1.ebuild, -rspec-1.1.2.ebuild:
  Remove old versions that will not become stable

*rspec-1.1.3 (01 Feb 2008)

  01 Feb 2008; Joshua Nichols <nichoj@gentoo.org> +rspec-1.1.3.ebuild:
  Version bump.

*rspec-1.1.2 (22 Jan 2008)

  22 Jan 2008; Richard Brown <rbrown@gentoo.org> +rspec-1.1.2.ebuild:
  Version bump.

*rspec-1.1.1 (18 Dec 2007)

  18 Dec 2007; Hans de Graaff <graaff@gentoo.org> +rspec-1.1.1.ebuild:
  Version bump:
  * Fix regression in 1.1.0 that caused transactions to not get rolled back
    between examples.
  * Applied patch from Bob Cotton to reintroduce
    ExampleGroup.description_options. Closes LH[#186]

*rspec-1.1.0 (14 Dec 2007)

  14 Dec 2007; Hans de Graaff <graaff@gentoo.org> +rspec-1.1.0.ebuild:
  Version bump:
   * The RSpec Story Runner
   * Nested Example Groups
   * Support for Rails 2.0.1
   * Test::Unit interoperability

  26 Sep 2007; Christoph Mende <angelos@gentoo.org> rspec-1.0.8.ebuild:
  Stable on amd64 wrt bug #193390

  24 Sep 2007; Christian Faulhammer <opfer@gentoo.org> rspec-1.0.8.ebuild:
  stable x86, bug 193390

  23 Sep 2007; nixnut <nixnut@gentoo.org> rspec-1.0.8.ebuild:
  Stable on ppc wrt bug 193390

  22 Sep 2007; Hans de Graaff <graaff@gentoo.org> -rspec-1.0.4.ebuild:
  Remove old unstable-only version

  20 Aug 2007; Markus Ullmann <jokey@gentoo.org> rspec-1.0.5.ebuild:
  Stable on x86 wrt bug #187617
